Fix the alignment of MoneyBox controls inside CollectionEditor views

--- a/woost/views/resources/styles/backoffice.css
+++ b/woost/views/resources/styles/backoffice.css
@@ -674,6 +674,11 @@ body.modal {
     width: 6em;
 }
 
+.BackOfficeLayout .CollectionEditor .MoneyBox {
+    display: inline-block;
+    margin-right: 1em;
+}
+
 /* Tables
 -----------------------------------------------------------------------------*/
 
